Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31047

MultiPointTouchArea eats mouse events, needs to ignore them

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.0 Beta1
    • 5.0.2, 5.1.0 , 5.1.1
    • None
    • Linux desktop with both a mouse and a multitouch input interface.
    • fe2de633f9b9454ec8a9c2a5874ad85f49d8d54d

      MouseArea ignores touches, MultiPointTouchArea needs to ignore mouse events.

      Currently the input choice for QML is MouseArea or
      MultiPointTouchArea. If the program expects only one of mouse or
      touch events the choice is clear. If the program needs to accept
      both, the MouseArea works if the interaction is limited to one touch
      or button provided Qt::AA_SynthesizeMouseForUnhandledTouchEvents is
      enabled (which by default is), but for multitouch interaction one
      MouseArea accepting input blocks all other MouseAreas, and it can't
      accept multiple in one area. If the program uses MultiPointTouchArea
      instead, touch events are sent to QML, but mouse events were blocked
      preventing any interaction from mouse events. This leaves a QML
      application without any way to get both the full mouse (such as middle and right clicks) or multiple touch event data.

        For Gerrit Dashboard: QTBUG-31047
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            david@fries.net David Fries
            Votes:
            10 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes